--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
   "name": "webpack-template",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Webpack project",
-  "main": "index.js",
+  "author": "Cheremnov Vladislav",
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "webpack-dev-server --mode development",
+    "build-dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "watch": "webpack --mode development --watch",
-    "start": "webpack-dev-server --mode development --open",
-    "clear": "del-cli dist"
+    "watch": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VlCheremnov/Webpack-template.git"
   },
-  "author": "Cheremnov Vladislav",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/VlCheremnov/Webpack-template/issues"
   },
   "homepage": "https://github.com/VlCheremnov/Webpack-template#readme",
+  "browserslist": [
+    "> 1%",
+    "ie >= 8",
+    "edge >= 15",
+    "ie_mob >= 10",
+    "ff >= 45",
+    "chrome >= 45",
+    "safari >= 7",
+    "opera >= 23",
+    "ios >= 7",
+    "android >= 4",
+    "bb >= 10"
+  ],
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "del-cli": "^3.0.0",
-    "html": "^1.0.0",
+    "dotenv": "^8.2.0",
+    "extract-loader": "^5.0.1",
+    "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
